Reestruturando a arquitetura no Frontend.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batalha Naval</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Batalha Naval</h1>
+
+    <!-- aqui será a página inicial, os codigos abaixo irão para o game.html -->
 
     <div class="container">
         <!-- Tabuleiro do Jogador -->
@@ -25,7 +27,6 @@
 
     <!-- Botão para reiniciar o jogo -->
     <button id="restart-btn">Reiniciar Jogo</button>
-
-    <script src="script.js"></script>
+    
 </body>
 </html>
