--- a/frontend/battleship/register/register.html
+++ b/frontend/battleship/register/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Batalha Naval</title>
+    <title>Registrar - Batalha Naval</title>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css//login-or-register.css">
 </head>
@@ -31,7 +31,7 @@
             <form class="login-form">
                 <input type="text" placeholder="Usuário">
                 <input type="password" placeholder="Senha">
-                <button type="submit" class="jogar-ou-registra-btn">Registar</button>
+                <button type="submit" class="jogar-ou-registra-btn">Registrar</button>
             </form>
         </div>
     </div>
