--- a/frontend/battleship/login/login.html
+++ b/frontend/battleship/login/login.html
@@ -14,8 +14,8 @@
                 <p class="subtitulo">Destrua o seu oponente e conquiste os mares!</p>
             <div class="regras">
                 <iframe
+                title="regras"
                 src="../../components/rules.html"
-                frameborder="0"
                 class="iframe-regras"
               ></iframe>
             </div>
@@ -36,6 +36,6 @@
         </div>
     </div>
 
-    <script src="../../script/login.js"></script>
+    <script src="../../api/login.js"></script>
 </body>
 </html>
