--- a/frontend/battleship/register/register.html
+++ b/frontend/battleship/register/register.html
@@ -35,6 +35,6 @@
             </form>
         </div>
     </div>
-    <script src="../../script/register.js"></script>
+    <script src="../../api/register.js"></script>
 </body>
 </html>
