alterações pós review

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Batalha Naval</title>
-  <link rel="stylesheet" href="/Battleship/frontend/components/rules.css">
-  <link rel="stylesheet" href="/Battleship/frontend/components/ranking.css">
-  <link rel="stylesheet" href="/Battleship/frontend/css/style.css">
+  <link rel="stylesheet" href="./frontend/components/rules.css">
+  <link rel="stylesheet" href="./frontend/components/ranking.css">
+  <link rel="stylesheet" href="./frontend/css/style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
       
       <div class="regras">
         <iframe
-          src="/Battleship/frontend/components/rules.html"  
+          src="./frontend/components/rules.html"  
           frameborder="0"
           class="iframe-regras"
           width="100%"
@@ -36,7 +36,7 @@
       <h2 class="titulo-ranking">Fique entre os 10 melhores jogadores!</h2>
       <div class="ranking">
         <iframe
-          src="/Battleship/frontend/components/ranking.html"
+          src="./frontend/components/ranking.html"
           frameborder="0"
           class="iframe-ranking"
           width="100%"
@@ -47,6 +47,6 @@
   </div>
 
   <!-- Incluindo o arquivo JS -->
-  <script src="/Battleship/frontend/api/index.js"></script>
+  <script src="./frontend/script/index.js"></script>
 </body>
 </html>
