feat(frontend): ship placement

--- a/frontend/battleship/game.html
+++ b/frontend/battleship/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleship</title>
     <link rel="stylesheet" href="../components/board.css" />
+    <link rel="stylesheet" href="../components/placeShip.css" />
     <link rel="stylesheet" href="../css/game.css" />
   </head>
   <body>
@@ -53,6 +54,7 @@
       </div>
     </main>
     <script type="module" src="../script/board.js"></script>
+    <script type="module" src="../script/placement.js"></script>
     <script type="module" src="../../frontend/api/game.js"></script>
   </body>
 </html>
