--- a/frontend/battleship/game.html
+++ b/frontend/battleship/game.html
@@ -52,6 +52,13 @@
         <button id="restart-btn" class="btn restart">REINICIAR</button>
         <button class="btn surrender" id="surrender-btn">DESISTIR</button>
       </div>
+
+      <div id="bot-waiting-message">
+        O robô está pensando...
+      </div>
+      
+      <div id="notification" class="notification"></div>
+
     </main>
     <script type="module" src="../script/board.js"></script>
     <script type="module" src="../script/placement.js"></script>
