--- a/frontend/battleship/game.html
+++ b/frontend/battleship/game.html
@@ -59,6 +59,8 @@
       
       <div id="notification" class="notification"></div>
 
+      <div id="game-over-message" class="game-over hidden"></div>
+
     </main>
     <script type="module" src="../script/board.js"></script>
     <script type="module" src="../script/placement.js"></script>
